--- a/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
@@ -64,6 +64,7 @@
                         android:layout_height="wrap_content"
 
                         android:src="@drawable/ic_heart_black_24dp"
+                        android:tint="@{safeUnbox(meetingViewModel.selectedMeeting.isUserLiked)? @color/colorPrimary : @android:color/black}"
 
                         app:layout_constraintStart_toStartOf="parent"
 
@@ -76,6 +77,7 @@
                         android:layout_height="wrap_content"
 
                         android:src="@drawable/ic_check_black_24dp"
+                        android:tint="@{safeUnbox(meetingViewModel.selectedMeeting.isUserGoing)? @color/colorPrimary : @android:color/black}"
 
                         app:layout_constraintEnd_toEndOf="parent"
 
