--- a/CarMeets Android App/app/src/main/res/layout/fragment_meeting_detail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meeting_detail.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Data binding voorzien -->
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<!-- Detail pagina voor meeting adhv databinding (portret) -->
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+>
+
     <data>
+
         <import type="android.view.View"/>
+
+        <!-- TextUtils nodig voor null or empty check string website -->
         <import type="android.text.TextUtils"/>
 
         <variable
                 name="meetingViewModel"
-                type="com.lennertbontinck.carmeetsandroidapp.viewmodels.MeetingViewModel"/>
+                type="com.lennertbontinck.carmeetsandroidapp.viewmodels.MeetingViewModel"
+        />
+
     </data>
 
-    <!-- Meeting detail voor portret -->
     <android.support.constraint.ConstraintLayout
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -22,7 +29,7 @@
 
         <!-- de foto van de meeting -->
         <ImageView
-                android:id="@+id/image_meetingdetail_header"
+                android:id="@+id/image_meeting_detail_header"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
 
@@ -39,7 +46,7 @@
 
         <!-- het liked en going icoon -->
         <android.support.constraint.ConstraintLayout
-                android:id="@+id/partial_meetingdetail_likedgoing"
+                android:id="@+id/partial_meeting_detail_liked_going"
                 android:layout_width="0px"
                 android:layout_height="wrap_content"
 
@@ -48,16 +55,17 @@
                 app:layout_constraintHorizontal_weight="1"
 
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/partial_meetingdetail_date"
-                app:layout_constraintStart_toStartOf="@+id/partial_meetingdetail_date"
+                app:layout_constraintBottom_toTopOf="@+id/partial_meeting_detail_date"
+                app:layout_constraintStart_toStartOf="@+id/partial_meeting_detail_date"
 
                 android:paddingBottom="8dp"
                 android:paddingTop="8dp"
-                android:layout_marginEnd="10dp">
+                android:layout_marginEnd="10dp"
+        >
 
             <!-- het liked icoon -->
             <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/image_meetingdetail_like"
+                    android:id="@+id/image_meeting_detail_like"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -66,11 +74,12 @@
 
                     app:layout_constraintStart_toStartOf="parent"
 
-                    android:layout_marginStart="8dp"/>
+                    android:layout_marginStart="8dp"
+            />
 
             <!-- het going icoon -->
             <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/image_meetingdetail_going"
+                    android:id="@+id/image_meeting_detail_going"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -79,14 +88,15 @@
 
                     app:layout_constraintEnd_toEndOf="parent"
 
-                    android:layout_marginEnd="8dp"/>
+                    android:layout_marginEnd="8dp"
+            />
 
 
         </android.support.constraint.ConstraintLayout>
 
         <!-- de datum van de meeting -->
         <android.support.constraint.ConstraintLayout
-                android:id="@+id/partial_meetingdetail_date"
+                android:id="@+id/partial_meeting_detail_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
@@ -94,17 +104,18 @@
                 android:background="@color/colorPrimary"
 
                 app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintTop_toBottomOf="@+id/image_meetingdetail_header"
+                app:layout_constraintTop_toBottomOf="@+id/image_meeting_detail_header"
                 app:layout_constraintEnd_toEndOf="parent"
 
                 android:layout_marginEnd="10dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:paddingBottom="8dp">
+                android:paddingBottom="8dp"
+        >
 
             <!-- de dag van de datum -->
             <TextView
-                    android:id="@+id/text_meetingdetail_dateday"
+                    android:id="@+id/text_meeting_detail_date_day"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
@@ -118,11 +129,12 @@
                     app:layout_constraintEnd_toEndOf="parent"
 
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"/>
+                    android:layout_marginEnd="8dp"
+            />
 
             <!-- de maand van de datum -->
             <TextView
-                    android:id="@+id/textView_meetingdetail_datemonth"
+                    android:id="@+id/text_meeting_detail_date_month"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
@@ -134,17 +146,18 @@
 
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_dateday"
+                    app:layout_constraintTop_toBottomOf="@+id/text_meeting_detail_date_day"
                     app:layout_constraintBottom_toBottomOf="parent"
 
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"/>
+                    android:layout_marginEnd="8dp"
+            />
 
         </android.support.constraint.ConstraintLayout>
 
         <!-- de titel van de meeting -->
         <TextView
-                android:id="@+id/text_meetingdetail_title"
+                android:id="@+id/text_meeting_detail_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
@@ -153,17 +166,18 @@
                 android:textSize="24sp"
                 android:textColor="@android:color/black"
 
-                app:layout_constraintTop_toBottomOf="@+id/image_meetingdetail_header"
+                app:layout_constraintTop_toBottomOf="@+id/image_meeting_detail_header"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+                app:layout_constraintEnd_toStartOf="@+id/partial_meeting_detail_date"
 
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginEnd="8dp"
+        />
 
         <!-- de subtitel van de meeting -->
         <TextView
-                android:id="@+id/text_meetingdetail_subtitle"
+                android:id="@+id/text_meeting_detail_subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
@@ -171,15 +185,17 @@
                 tools:text="Een android app vieren met een gepaste meeting"
                 android:text="@{meetingViewModel.selectedMeeting.subtitle}"
 
-                app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_title"
+                app:layout_constraintTop_toBottomOf="@+id/text_meeting_detail_title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+                app:layout_constraintEnd_toStartOf="@+id/partial_meeting_detail_date"
 
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
-        <!-- een mooie scheidingslijn tussen de subtitel en beschrijving -->
+                android:layout_marginEnd="8dp"
+        />
+
+        <!-- een visuele scheidingslijn tussen de subtitel en beschrijving -->
         <View
-                android:id="@+id/divider_meetingdetail_undersubtitle"
+                android:id="@+id/divider_meeting_detail_under_subtitle"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
 
@@ -187,13 +203,14 @@
                 android:background="@android:color/darker_gray"
 
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_subtitle"
-                app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+                app:layout_constraintTop_toBottomOf="@+id/text_meeting_detail_subtitle"
+                app:layout_constraintEnd_toStartOf="@+id/partial_meeting_detail_date"
 
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginEnd="8dp"
+        />
 
         <!-- de beschrijving scrollview -->
         <ScrollView
@@ -203,7 +220,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider_meetingdetail_undersubtitle"
+                app:layout_constraintTop_toBottomOf="@+id/divider_meeting_detail_under_subtitle"
 
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="8dp"
@@ -218,18 +235,19 @@
             >
                 <!-- de beschrijving -->
                 <TextView
-                        android:id="@+id/text_meetingdetail_description"
+                        android:id="@+id/text_meeting_detail_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
                         tools:text="Niet alleen is Lennert zijn GTI eindelijk af, ook zijn studies zijn bijna afgerond! Dankzij deze android app zou hij namelijk een stap dichter moeten komen naar zijn diploma! als dat maar goed afloopt."
                         android:text="@{meetingViewModel.selectedMeeting.description}"
 
-                        app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent"
+                />
 
                 <!-- de categorieën van de meeting -->
                 <TextView
-                        android:id="@+id/text_meetingdetail_categories"
+                        android:id="@+id/text_meeting_detail_categories"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
@@ -238,15 +256,15 @@
                         android:drawableStart="@drawable/ic_categories_pink_24dp"
                         android:drawablePadding="8dp"
 
-                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_description"
+                        app:layout_constraintTop_toBottomOf="@+id/text_meeting_detail_description"
 
                         android:layout_marginTop="12dp"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                 />
 
                 <!-- de mensen die geliked hebben -->
                 <TextView
-                        android:id="@+id/text_meetingdetail_amount_liked"
+                        android:id="@+id/text_meeting_detail_amount_liked"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
@@ -255,15 +273,15 @@
                         android:drawableStart="@drawable/ic_heart_pink_24dp"
                         android:drawablePadding="8dp"
 
-                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_categories"
+                        app:layout_constraintTop_toBottomOf="@+id/text_meeting_detail_categories"
 
                         android:layout_marginTop="6dp"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                 />
 
                 <!-- de mensen die gaan hebben opgegeven -->
                 <TextView
-                        android:id="@+id/text_meetingdetail_amount_going"
+                        android:id="@+id/text_meeting_detail_amount_going"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
@@ -272,15 +290,15 @@
                         android:drawableStart="@drawable/ic_check_pink_24dp"
                         android:drawablePadding="8dp"
 
-                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_amount_liked"
+                        app:layout_constraintTop_toBottomOf="@+id/text_meeting_detail_amount_liked"
 
                         android:layout_marginTop="6dp"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                 />
 
-                <!-- Virtual divider vertical 10% -->
+                <!-- Virtuele scheidingslijn op 10% verticaal -->
                 <android.support.constraint.Guideline
-                        android:id="@+id/guideline_meetingdetail_10percent_vertical"
+                        android:id="@+id/guideline_meeting_detail_10percent_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -288,9 +306,9 @@
                         app:layout_constraintGuide_percent="0.10"
                 />
 
-                <!-- Virtual divider vertical 90% -->
+                <!-- Virtuele scheidingslijn op 90% verticaal -->
                 <android.support.constraint.Guideline
-                        android:id="@+id/guideline_meetingdetail_90percent_vertical"
+                        android:id="@+id/guideline_meeting_detail_90percent_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -300,7 +318,7 @@
 
                 <!-- opslaan in agenda knop -->
                 <Button
-                        android:id="@+id/button_meetingdetail_agenda"
+                        android:id="@+id/button_meeting_detail_agenda"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -308,16 +326,16 @@
                         android:drawableEnd="@drawable/ic_add_agenda_white_18dp"
                         android:text="@string/btn_meeting_agenda"
 
-                        app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_amount_going"
-                        app:layout_constraintEnd_toEndOf="@id/guideline_meetingdetail_90percent_vertical"
-                        app:layout_constraintStart_toStartOf="@id/guideline_meetingdetail_10percent_vertical"
+                        app:layout_constraintTop_toBottomOf="@+id/text_meeting_detail_amount_going"
+                        app:layout_constraintEnd_toEndOf="@id/guideline_meeting_detail_90percent_vertical"
+                        app:layout_constraintStart_toStartOf="@id/guideline_meeting_detail_10percent_vertical"
 
                         android:layout_marginTop="12dp"
                 />
 
                 <!-- opslaan in routebeschrijving knop -->
                 <Button
-                        android:id="@+id/button_meetingdetail_route"
+                        android:id="@+id/button_meeting_detail_route"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -325,16 +343,16 @@
                         android:drawableEnd="@drawable/ic_navigation_white_18dp"
                         android:text="@string/btn_meeting_route"
 
-                        app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_agenda"
-                        app:layout_constraintEnd_toEndOf="@id/guideline_meetingdetail_90percent_vertical"
-                        app:layout_constraintStart_toStartOf="@id/guideline_meetingdetail_10percent_vertical"
+                        app:layout_constraintTop_toBottomOf="@+id/button_meeting_detail_agenda"
+                        app:layout_constraintEnd_toEndOf="@id/guideline_meeting_detail_90percent_vertical"
+                        app:layout_constraintStart_toStartOf="@id/guideline_meeting_detail_10percent_vertical"
 
                         android:layout_marginTop="12dp"
                 />
 
                 <!-- ga naar website knop -->
                 <Button
-                        android:id="@+id/button_meetingdetail_website"
+                        android:id="@+id/button_meeting_detail_website"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
@@ -344,9 +362,9 @@
 
                         android:visibility='@{!TextUtils.isEmpty(meetingViewModel.selectedMeeting.website)}'
 
-                        app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_route"
-                        app:layout_constraintEnd_toEndOf="@id/guideline_meetingdetail_90percent_vertical"
-                        app:layout_constraintStart_toStartOf="@id/guideline_meetingdetail_10percent_vertical"
+                        app:layout_constraintTop_toBottomOf="@+id/button_meeting_detail_route"
+                        app:layout_constraintEnd_toEndOf="@id/guideline_meeting_detail_90percent_vertical"
+                        app:layout_constraintStart_toStartOf="@id/guideline_meeting_detail_10percent_vertical"
 
                         android:layout_marginTop="12dp"
                 />
