--- a/CarMeets Android App/app/src/main/res/layout/fragment_meeting_list.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meeting_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Een fragment voor een lijst van meetings weer te geven (single pane) -->
 <android.support.constraint.ConstraintLayout
+        android:id="@+id/fragment_meeting_list"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
